crates/rlf-macros/tests/fail/nested_call.rs
use rlf::rlf;

rlf! {
    inner($x) = "[{$x}]";
    outer($x) = "({$x})";
    bad($y) = "{outer(inner($y))}";
}

fn main() {}
